# class-registration-script

./: .gitignore  README.md  pyproject.toml  settings.example.json
class_registration_script/: __main__.py
