[tool.poetry]
name = "class-registration-script"
version = "0.1.0"
description = ""
authors = ["seth shoemaker <contact@sethshoemaker.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
selenium = "^4.19.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
